--- a/drumkit/drum.html
+++ b/drumkit/drum.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js Drum Kit</title>
+    <link rel="stylesheet" href="drum.css">
 </head>
 <body>
     <div class="keys">
@@ -48,7 +49,7 @@
 
     </div>
 
-<audio data-key="65" src="sounds/clap"></audio>
+<audio data-key="65" src="sounds/clap.wav"></audio>
 <audio data-key="83" src="sounds/hihat.wav"></audio>
 <audio data-key="68" src="sounds/kick.wav"></audio>
 <audio data-key="70" src="sounds/openhat.wav"></audio>
@@ -59,7 +60,7 @@
 <audio data-key="76" src="sounds/tink.wav"></audio>
 
 
-
+<script src="drum.js"></script>
 
 </body>
 </html>
